@@ -1,15 +1,15 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/assert.c,v $
- * $Date: 2003/01/05 12:40:04 $
- * $Revision: 1.4 $
+ * $Date: 2003/07/29 23:04:27 $
+ * $Revision: 1.5 $
  * $State: Exp $
  * $Author: admin $
  *
  ***************************************************************************/
 
 #ifdef EMBED_RCSID
-static const char rcs_id[] = "$Id: assert.c,v 1.4 2003/01/05 12:40:04 admin Exp $";
+static const char rcs_id[] = "$Id: assert.c,v 1.5 2003/07/29 23:04:27 admin Exp $";
 #endif
 
 #include <stdio.h>
@@ -21,7 +21,7 @@ static const char rcs_id[] = "$Id: assert.c,v 1.4 2003/01/05 12:40:04 admin Exp 
       foo.c, line 1234: bar: Assertion failed: a == b
    Then call abort().  */
 void
-__assert_fail (const char *expr, const char *file, int line, const char *function)
+__assert2 (const char *expr, const char *function, const char *file, int line)
 {
   PTHREAD_UNSAFE /* Not strictly unsafe, but should help debugging */
 
